feat: интеграция с Google Sheets и реорганизация проекта

--- a/tmp.css
+++ b/tmp.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Croc';
-    src: url('CoFoWeather20240219-VF.ttf');
+    src: url('assets/fonts/CoFoWeather20240219-VF.ttf');
 }
 
 body * {
