--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@
     border: 1px solid #ddd;
     border-radius: 6px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-    max-height: 400px;
+    max-height: 420px;
     overflow-y: auto;
     z-index: 1000;
     animation: dropdownFadeIn 0.2s ease;
@@ -460,15 +460,15 @@
 }
 
 .ksmm-list-item h4 {
-    margin: 0 0 8px 0;
-    font-size: 0.875em;
+    margin: 0 0 4px 0;
+    /* font-size: 0.875em; */
     font-variation-settings: 'wdth' 105;
 }
 
 /* Индикатор категории */
 .ksmm-category-indicator {
-    width: 14px;
-    height: 14px;
+    width: 16px;
+    height: 16px;
     border-radius: 50%;
     flex-shrink: 0;
     margin-top: 2px;
